--- a/parsec-test/parsec-test.cabal
+++ b/parsec-test/parsec-test.cabal
@@ -27,13 +27,20 @@ library
     text ^>=1.2.4.0,
     parsec ^>=3.1.14.0,
     llvm-hs ^>=9.0.1,
-  -- hs-source-dirs:
+  hs-source-dirs:
+    src,
   default-language:    Haskell2010
 
 executable parsec-test
   main-is:             Main.hs
   -- other-modules:
   -- other-extensions:
-  build-depends:       base ^>=4.12.0.0
-  -- hs-source-dirs:
+  build-depends:
+    base ^>=4.12.0.0,
+    containers ^>=0.6.2.1,
+    text ^>=1.2.4.0,
+    parsec ^>=3.1.14.0,
+    llvm-hs ^>=9.0.1,
+  hs-source-dirs:
+    src,
   default-language:    Haskell2010
