--- a/parsec-test/parsec-test.cabal
+++ b/parsec-test/parsec-test.cabal
@@ -26,9 +26,8 @@ library
     containers ^>=0.6.2.1,
     text ^>=1.2.4.0,
     parsec ^>=3.1.14.0,
-    llvm-hs ^>=9.0.1,
   hs-source-dirs:
-    src,
+    src
   default-language:    Haskell2010
 
 executable parsec-test
@@ -40,7 +39,6 @@ executable parsec-test
     containers ^>=0.6.2.1,
     text ^>=1.2.4.0,
     parsec ^>=3.1.14.0,
-    llvm-hs ^>=9.0.1,
   hs-source-dirs:
-    src,
+    src
   default-language:    Haskell2010
