--- a/parser-lexer-baidicoot/parser-lexer-baidicoot.cabal
+++ b/parser-lexer-baidicoot/parser-lexer-baidicoot.cabal
@@ -23,9 +23,8 @@ library
   -- other-modules:
   -- other-extensions:
   build-depends:
-    base ^>=4.12.0.0,
-    containers ^>=0.6.2.1,
-    text ^>=1.2.4.0,
-    parsec ^>=3.1.14.0,
+    base >= 4.8 && < 5,
+    text >= 1.2 && < 1.3,
+    parsec >= 3.1 && < 3.2,
   hs-source-dirs:      src
   default-language:    Haskell2010
