--- a/laser-hs/laser-hs.cabal
+++ b/laser-hs/laser-hs.cabal
@@ -3,7 +3,7 @@ cabal-version:       2.4
 -- 'cabal init'.  For further documentation, see
 -- http://haskell.org/cabal/users-guide/
 
-name:                parser-lexer-baidicoot
+name:                laser-hs
 version:             0.1.0.0
 -- synopsis:
 -- description:
