--- a/laser-hs/laser-hs.cabal
+++ b/laser-hs/laser-hs.cabal
@@ -20,11 +20,11 @@ library
   exposed-modules:
     AST,
     Parser
-  -- other-modules:
-  -- other-extensions:
+  -- other-modules
   build-depends:
-    base >= 4.8 && < 5,
-    text >= 1.2 && < 1.3,
-    parsec >= 3.1 && < 3.2,
+    base   >= 4.8 && < 5,
+    text   >= 1.2 && < 1.3,
+    parsec >= 3.1 && < 3.2
   hs-source-dirs:      src
   default-language:    Haskell2010
+  ghc-options:         -W
